# kuramemo-site

./: .env.example  .gitignore  AIアフィリエイト事業設計.md  IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  README.md  docker-compose.wordpress.yml  pyproject.toml
config/: env.example  settings.json  source_candidates.json  sources.json  wordpress.env.example
data/: affiliate_link_entry_template.csv  affiliate_metrics_template.csv  affiliate_program_inventory.csv  comparison_product_map.csv  content_backlog.csv  conversions_template.csv  eval_cases.json  international_market_backlog.csv  lifecycle_messages.csv  manual_metrics_template.csv  monthly_affiliate_calendar.csv  offer_assets.csv  offers.csv  post_stage_templates.csv  sample_feed.xml  service_offer_backlog.csv  service_offer_candidates.csv  social_accounts_template.csv  trend_topic_rules.csv  video_campaigns.csv
docs/: AFFILIATE_INVENTORY.md  AFFILIATE_PERFORMANCE.md  AFFILIATE_SITE_LAUNCH.md  ASP_REGISTRATION_GUIDE.md  BRAND_AND_EDITORIAL.md  CATEGORY_POLICY.md  CEO_HANDOFF.md  CEO_NEXT_ACTIONS.md  CLICK_TRACKING_LOCAL.md  COMPARISON_SITE_STRATEGY.md  CONTENT_TEMPLATES.md  DAILY_OPERATION_RUNBOOK.md  DELIVERABLES_INDEX.md  DEPLOYMENT_GATE.md  DESIGN_SKILL_SELECTION.md  DISCORD_POSTING_BRIDGE.md  FORTUNE_SNS_LAUNCH.md  FREE_WORK_CHECKLIST.md  FULL_AUTO_DEPLOYMENT.md  GITHUB_PAGES_LAUNCH.md  HIGH_TICKET_EXPANSION_POLICY.md  INTERNATIONAL_EXPANSION.md  KURARA_CHARACTER_GUIDE.md  LINE_EMAIL_FUNNEL.md  LOCAL_WORDPRESS.md  MEDIA_PROFILE.md  MIKERU_CHARACTER_GUIDE.md  OFFER_ACTIVATION_WORKFLOW.md  OPERATIONS.md  SEARCH_DISCOVERY.md  (+21 more)
(+144 files in other folders)
